force-app/main/default/objects/AttainmentYTD__c/AttainmentYTD__c.object-meta.xml
<CustomObject>
    <description>YTD sales attainment</description>
    <label>AttainmentYTD</label>
    <nameField>
        <label>Attainment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AttainmentYTD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>