force-app/main/default/objects/AttainmentYTD__c/fields/Compensation_Metric__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Metric__c</fullName>
    <label>Compensation Metric</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hardware Margin</fullName>
            </value>
            <value>
                <fullName>MCP Base Recurring Growth</fullName>
            </value>
            <value>
                <fullName>MCP Premium Application Growth</fullName>
            </value>
            <value>
                <fullName>Total Weighted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>