force-app/main/default/objects/AttainmentYTD__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Name of the territory.  for regions, it&apos;s something like &quot;East District 1&quot;.   For Strategic, it&apos;s the last name of the account manager; for example, &quot;Williams&quot;</description>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>East District 1</fullName>
            </value>
            <value>
                <fullName>East District 2</fullName>
            </value>
            <value>
                <fullName>East District 3</fullName>
            </value>
            <value>
                <fullName>East District 4</fullName>
            </value>
            <value>
                <fullName>East District 5</fullName>
            </value>
            <value>
                <fullName>West District 1</fullName>
            </value>
            <value>
                <fullName>West District 2</fullName>
            </value>
            <value>
                <fullName>West District 3</fullName>
            </value>
            <value>
                <fullName>West District 4</fullName>
            </value>
            <value>
                <fullName>Bauckman</fullName>
            </value>
            <value>
                <fullName>Coop</fullName>
            </value>
            <value>
                <fullName>Gallinger</fullName>
            </value>
            <value>
                <fullName>Huprich</fullName>
            </value>
            <value>
                <fullName>Pappas</fullName>
            </value>
            <value>
                <fullName>Plaat</fullName>
            </value>
            <value>
                <fullName>Thell</fullName>
            </value>
            <value>
                <fullName>Williams</fullName>
            </value>
            <value>
                <fullName>East Total</fullName>
            </value>
            <value>
                <fullName>West Total</fullName>
            </value>
            <value>
                <fullName>Strategic Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>