force-app/main/default/objects/AttainmentYTD__c/fields/YTD_Attainment__c.field-meta.xml
<CustomField>
    <fullName>YTD_Attainment__c</fullName>
    <label>YTD Attainment</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>